// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`naive_bayes:MultinomialNB should not fit invalid inputs 1`] = `
ValidationError {
  "message": "validateFitInputs received a non-array input X",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:MultinomialNB should not fit invalid inputs 2`] = `
ValidationClassMismatch {
  "message": "Number of labels=1 does not math number of samples=2",
  "name": "ValidationClassMismatch",
}
`;

exports[`naive_bayes:MultinomialNB should not fit invalid inputs 3`] = `
ValidationClassMismatch {
  "message": "Number of labels=1 does not math number of samples=0",
  "name": "ValidationClassMismatch",
}
`;

exports[`naive_bayes:MultinomialNB should not predict if the model is not trained yet 1`] = `[TypeError: Cannot read properties of undefined (reading 'classCategories')]`;

exports[`naive_bayes:MultinomialNB should not predict invalid inputs 1`] = `
ValidationError {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:MultinomialNB should not predict invalid inputs 2`] = `
ValidationError {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:MultinomialNB should not predict invalid inputs 3`] = `
ValidationError {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:MultinomialNB should not predict invalid inputs 4`] = `
Validation2DMatrixError {
  "message": "The matrix is not 2D shaped: [1,2] of [2]",
  "name": "Validation2DMatrixError",
}
`;
